--- a/stage.html
+++ b/stage.html
@@ -73,20 +73,34 @@
                 embedded_svc.settings.entryFeature = 'LiveAgent';
         
                 embedded_svc.init(
-                    'https://unify-snhu--stage.my.salesforce.com',
-                    'https://stage-mysnhu.cs193.force.com/applicantportal',
-                    gslbBaseURL,
-                    '00D7e00000GL7Qz',
-                    'SNHU_Web_Chat',
-                    {
-                        baseLiveAgentContentURL: 'https://c.la3-c1cs-ia4.salesforceliveagent.com/content',
-                        deploymentId: '5727e0000004Cpj',
-                        buttonId: '5737e0000004DDq',
-                        baseLiveAgentURL: 'https://d.la3-c1cs-ia4.salesforceliveagent.com/chat',
-                        eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I2h000000008oEAA_179dbbafab9',
-                        isOfflineSupportEnabled: false
-                    }
-                );
+
+                                    'https://unify-snhu--stage.my.salesforce.com',
+
+                                    'https://stage-mysnhu.cs63.force.com/applicantportal',
+
+                                    gslbBaseURL,
+
+                                    '00D6C0000000sgM',
+
+                                    'SNHU_Web_Chat',
+
+                                    {
+
+                                                baseLiveAgentContentURL: 'https://c.la2-c1cs-ia5.salesforceliveagent.com/content',
+
+                                                deploymentId: '5723l000000leEY',
+
+                                                buttonId: '5733l000000lYjx',
+
+                                                baseLiveAgentURL: 'https://d.la2-c1cs-ia5.salesforceliveagent.com/chat',
+
+                                                eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I2h000000008oEAA_179dbbafab9',
+
+                                                isOfflineSupportEnabled: false
+
+                                    }
+
+                        );
             };
         
             if (!window.embedded_svc) {
