--- a/stage.html
+++ b/stage.html
@@ -127,26 +127,20 @@
        let cbTrackerValues = chatBoxTrackingParams.getCookieValues();
 	    var parseValue ={
 			  "fieldpopulation": {
-			    "campaign": (cbTrackerValues['utm_campaign'] !== undefined) ? cbTrackerValues['utm_campaign']  : '',
-			    "source": (cbTrackerValues['utm_source'] !== undefined) ? cbTrackerValues['utm_source']  : '',
-			    "medium": (cbTrackerValues['utm_medium'] !== undefined) ? cbTrackerValues['utm_medium']  : '',
-			    "content": (cbTrackerValues['utm_content'] !== undefined) ? cbTrackerValues['utm_content']  : '',
-			    "utm_term": (cbTrackerValues['utm_term'] !== undefined) ? cbTrackerValues['utm_term']  : '',
-			    "gclientid": (cbTrackerValues['Google_ID__c'] !== undefined) ? cbTrackerValues['Google_ID__c']  : '',
-			    "landingPage": "landingPage",
-			    "referrer": "referrer"
-			  },
-			  "labelChangeArray": [
-			    {
-			      "newlabel": "Last Name",
-			      "oldlabel": "Last Name"
-			    },
-                {
-                  "newlabel": "Questions/Comments",
-                  "oldlabel": "Details Field"
-                }
-			  ]
-			}
+			      "campaign": (cbTrackerValues['utm_campaign'] !== undefined) ? cbTrackerValues['utm_campaign']  : '',
+                              "source": (cbTrackerValues['utm_source'] !== undefined) ? cbTrackerValues['utm_source']  : '',
+                              "medium": (cbTrackerValues['utm_medium'] !== undefined) ? cbTrackerValues['utm_medium']  : '',
+                              "content": (cbTrackerValues['utm_content'] !== undefined) ? cbTrackerValues['utm_content']  : '',
+                              "utm_term": (cbTrackerValues['utm_term'] !== undefined) ? cbTrackerValues['utm_term']  : '',
+                              "gclientid": (cbTrackerValues['Google_ID__c'] !== undefined) ? cbTrackerValues['Google_ID__c']  : '',
+                              "landingPage": (cbTrackerValues['Landing_Page'] !== undefined) ? cbTrackerValues['Landing_Page']  : '',
+                              "referrer": (cbTrackerValues['Referrer'] !== undefined) ? cbTrackerValues['Referrer']  : ''
+			                      },
+         		 "labelChangeArray": [{
+						"newlabel": "Questions/Comments",
+                  				"oldlabel": "Details Field"
+					     }]
+			   }
 	    window.name = JSON.stringify(parseValue);
     
         window.setInterval(function () {
